fixed spacing for playlist page

--- a/src/style/genreGeneratorCSS.css
+++ b/src/style/genreGeneratorCSS.css
@@ -1,10 +1,4 @@
-* {
-    box-sizing: border-box;
-  }
-  body {
-    font-size: 14px;
-  }
-  
+
   .v4_117 {
     width: 100%;
     height: 100%;
